# prs

./: README.md  Taskfile.yml  pyproject.toml
prs/: cli.py  config.py  github.py
