[project]
requires-python = ">=3.10"

[tool.poetry]
name = "prs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest = "^8.0.0"

[tool.poetry.scripts]
prs = "prs.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "UP"]